--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/three": "^0.181.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,6 +33,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
