--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
+    "phaser": "^3.90.0",
     "postcss": "8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
